<resources>
    <string name="app_name">CarRental_1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about_text">This app is made my Kārlis Z and Reinis B. as a finals project in the course: Object Oriented Programming</string>
    <string name="action_about_me">About Me</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="view_cars">View Cars</string>
    <string name="rent_car">Rent Car</string>
    <string name="return_car">Return Car</string>
    <string name="my_rentals">My Rentals</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="add_car">Add Car</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="show_rents">Show All ended Rents</string>
    <string name="show_users">Show All Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_car">Add New Car</string>
    <string name="save">Save</string>
    <string name="price_per_day">Price Per Day</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="show_cars">Show All cars</string>
    <string name="no_current_reservations_are_active">No current reservations are active</string>
    <string name="userimage">userimage</string>
    <string name="about_me">About Me</string>
    <string-array name="fuel_type_array">
        <item>Select Fuel Type</item>
        <item>Diesel</item>
        <item>Petrol</item>
    </string-array>

    <string-array name="transmission_type_array">
        <item>Select Transmission Type</item>
        <item>Manual</item>
        <item>Automatic</item>
    </string-array>
</resources>